I have fixed the display issues with the header image. I have deactivated the scroll bar when the image is displayed.

--- a/about_me.html
+++ b/about_me.html
@@ -12,13 +12,16 @@
                 <h1 class="side_column_title"><a href="index.html">TL</a></h1>
             </div>
             <ul>
-                <li><a href="index.html#pro">Portfolio</a></li>
+                <li><a href="index.html#projects">Portfolio</a></li>
                 <li><a href="coding_examples.html">Coding examples</a></li>
                 <li><a href="scs_scheme.html">S.C.S Scheme</a></li>
                 <li><a href="about_me.html">About me</a></li>
-                <li><a href="index.html#con">Contact me</a></li>
-                <li><a href="#"><i class="fa-brands fa-square-github"></i></a></li>
+                <li><a href="index.html#contact">Contact me</a></li>
             </ul>
+            <div class="github">
+                <h2>GitHub</h2>
+                <a class="github_link" href="https://github.com/Theodore-ui?tab=repositories" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+            </div>
         </div>
         <main class="about_me_main">
             <div class="menu_title">
@@ -31,16 +34,16 @@
                 <h2 class="about_me_section_title">Personal Statment</h2>
                 <p>With exceptional problem-solving skills, I am able to analyse problems and break them down into their component parts.
                  Then solve each part in a logical sequence to ensure the problem is solved in the most efficient and accurate way. Maintaining
-                 focus while working independently comes easily to me as I am motivated to work to the best of my ability rather then any minimum
-                 requirement. When working in cooperation with others, I utilise my communication and organisational skills to ensure they are
-                 able to make the most of there time. Also, when I require assistance, I ask for it immediately to ensure that I am making the
+                 focus while working independently comes easily to me as I am motivated to work to the best of my ability rather than any minimum
+                 requirement. When working in cooperation with others, I utilise my communication and organisational skills to ensure they can
+                 make the most of their time. Also, when I require assistance, I ask for it immediately to ensure that I am making the
                  most of my time. With a sharp eye for detail, I can quickly identify discrepancies and highlight issues that may have caused
                  these discrepancies and further establish what problems have or could have occurred as a result.</p> 
                  
-                <p>Previous I worked as a Planning Administrator at Transam Trucking Limited I worked within strict legal regulations and
+                <p>Previously I worked as a Planning Administrator at Transam Trucking Limited I worked within strict legal regulations and
                  company policy to create detailed travel plans to assist transportation of equipment across Europe and the UK. I made certain
                  everything was accurate, clear and sent out to relevant parties to meet a hard deadline. Inspired by my interest in consistent
-                 and logical work, I decided to persue a career in computer programming. This led me to apply for the 
+                 and logical work, I decided to pursue a career in computer programming. This led me to apply for the 
                  <a class="inline_scs" href="scs_scheme.html">Scion Scheme</a>, a project run by Netmatters to provide the necessary skills training to enter the
                  computer programing industry. I was accepted onto the course and am now training to be a web developer.</p>
             </div>
@@ -55,7 +58,7 @@
                      global development and time shows we have passed the inflection point where 1 unit of time corresponds
                      to a greater than 1 unit of global development. As we become more efficient in a globalised world the
                      consumption of energy will increase and thus software to manage efficiency is fundamental. This is no more
-                     pressing than in the transportation industry. A career in technology would allow me to be apart of this. My
+                     pressing than in the transportation industry. A career in technology would allow me to be a part of this. My
                      logical thinking and problem-solving skills position me as a good candidate to create digital systems that
                      are more efficient and effective than those we have currently.</p>
                 </div>
@@ -78,8 +81,8 @@
                 <p>I aspire to be a computer programmer. I would find the process of identifying the limitations and problems of current
                  software, working out how these problems can be solved, and then writing code for purpose-driven software and extremely
                  satisfying process. Being a computer programmer requires you to be extremely logical when creating software as you may be
-                 required to adapt your code as a result of a change of requirement; being a computer programmer would allow me to utilize
-                 my logical-think and problem-solving skills.</p>
+                 required to adapt your code as a result of a change of requirement; being a computer programmer would allow me to utilise
+                 my logical-thinking and problem-solving skills.</p>
                 
                 <p>To create the best code possible, working alongside other programmers is often required. This is to the effect of consolidating
                  solutions to different aspects of the software being developed and deciding which solutions should be implemented into the final
