--- a/scs_scheme.html
+++ b/scs_scheme.html
@@ -12,12 +12,16 @@
                 <h1 class="side_column_title"><a href="index.html">TL</a></h1>
             </div>
             <ul>
-                <li><a href="index.html#pro">Portfolio</a></li>
+                <li><a href="index.html#projects">Portfolio</a></li>
                 <li><a href="coding_examples.html">Coding examples</a></li>
                 <li><a href="scs_scheme.html">S.C.S Scheme</a></li>
                 <li><a href="about_me.html">About me</a></li>
-                <li><a href="index.html#con">Contact me</a></li>
+                <li><a href="index.html#contact">Contact me</a></li>
             </ul>
+            <div class="github">
+                <h2>GitHub</h2>
+                <a class="github_link" href="https://github.com/Theodore-ui?tab=repositories" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+            </div>
         </div>
         <main class="scs_main">
             <div class="menu_title">
@@ -45,9 +49,9 @@
                         <p>Treehouse is an online learning community, featuring videos covering a number of
                         topics from basic HTML to C# programming, iOS development, data analysis, and more.
                         By completing courses users can earn points, allowing them to track their progress 
-                        and see how much they?ve covered in certain areas.</p>
+                        and see how much they've covered in certain areas.</p>
                         <span class="T_S">Total Score: 7,009</span>
-                        <span><a href="https://teamtreehouse.com/theodorelorenc2">teamtreehouse.com/theodorelorenc2</a></span>
+                        <span><a href="https://teamtreehouse.com/theodorelorenc2" target=”_blank”>teamtreehouse.com/theodorelorenc2</a></span>
                     </div>
                 </div>
                 <br><br>
