I have added a page link and a gitbub repository link to the project cards

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                             <div class="project_card_bottom">
                                 <h2>HTML &#38; CSS/SASS Reflection</h2>
                                 <p>A recreation of the Netmatters home page.</p>
-                                <p><a href="http://netmattershomepage.theodore-lorenc.netmatters-scs.co.uk/" target=”_blank”>View Project</a></p>
-                                <p><a href="https://theodore-ui.github.io/HTML_and_CSS_Reflection/" target=”_blank”>GitHub Repository</a></p>
+                                <div class="project_links">
+                                    <p class="page_link"><a href="http://netmatters.theodore-lorenc.netmatters-scs.co.uk/" target=”_blank”>Project Page</a></p>
+                                    <p class="rep_link"><a href="https://github.com/Theodore-ui/HTML_and_CSS_Reflection" target=”_blank”>GitHub Repository</a></p>
+                                </div>
                             </div>
                         </div>
                         <div class="project_card">
@@ -61,8 +63,10 @@
                             <div class="project_card_bottom">
                                 <h2>JavaScript Array Reflection</h2>
                                 <p>A randomly generated can be linked to an email. All images linked to an email can be viewed and unlinked.</p>
-                                <p><a href="http://javascript-array.theodore-lorenc.netmatters-scs.co.uk/" target=”_blank”>Examine Project</a></p>
-                                <p><a href="https://theodore-ui.github.io/HTML_and_CSS_Reflection/" target=”_blank”>GitHub Repository</a></p>
+                                <div class="project_links">
+                                    <p class="page_link"><a href="http://javascript-array.theodore-lorenc.netmatters-scs.co.uk/" target=”_blank”>Project Page</a></p>
+                                    <p class="rep_link"><a href="https://github.com/Theodore-ui/Javascript_Array_Reflection" target=”_blank”>GitHub Repository</a></p>
+                                </div>
                             </div>
                         </div>
                         <div class="project_card">
